updating mod logic

--- a/List/client/list.html
+++ b/List/client/list.html
@@ -96,4 +96,8 @@
 			</div>
 		</div>
 	</div>
+	<div>
+		<input type="button" id="prev" value="Prev" />
+		<input type="button" id="next" value="Next" />
+	</div>
 </template>
