Refactor reflow logic, add previous versions

--- a/List/client/list.html
+++ b/List/client/list.html
@@ -19,6 +19,7 @@
 	<div>
 		<label>Search:</label>
 		<input type="text" id="search" />
+		<input type="button" id="search-btn" value="Search" />
 	</div>
 	<div>
 		<label>Mod:</label>
@@ -32,7 +33,7 @@
 		<input type="button" class="list-btn-next" value="Next" />
    </div>
 	<div id="results-container" class="results-container">
-		<div class="result" data-sort-key='{"alpha":"A2011 CPER Herbaceous Biomass and LAI prototype","numeric":"2011"}'>
+		<div class="result not-in-page" data-sort-key='{"alpha":"A2011 CPER Herbaceous Biomass and LAI prototype","numeric":"2011"}'>
 			<div class="result-shown">
 				<div class="result-left float-left">
 					<dl>
@@ -57,7 +58,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="result" data-sort-key='{"alpha":"Bacon ipsum dolor amet turkey pastrami tri-tip cupim bresaola.","numeric":"2054"}'>
+		<div class="result not-in-page" data-sort-key='{"alpha":"Bacon ipsum dolor amet turkey pastrami tri-tip cupim bresaola.","numeric":"2054"}'>
 			<div class="result-shown">
 				<div class="result-left float-left">
 					<dl>
@@ -82,7 +83,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="result" data-sort-key='{"alpha": "X2011 CPER Herbaceous Biomass and LAI prototype","numeric":"2009"}'>
+		<div class="result not-in-page" data-sort-key='{"alpha": "X2011 CPER Herbaceous Biomass and LAI prototype","numeric":"2009"}'>
 			<div class="result-shown">
 				<div class="result-left float-left">
 					<dl>
